--- a/index.html
+++ b/index.html
@@ -1,190 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Good Morning Arya ❤️</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Good Morning Arya ❤️</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: linear-gradient(180deg, #2b0f14, #6b1e2d, #b23a48);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Libre Baskerville', serif;
-      color: #fff3f5;
-      overflow-y: auto; /* ✅ allow scrolling */
-      text-align: center;
-      padding: 15px;
-    }
+<style>
+body{
+  margin:0;
+  background:linear-gradient(180deg,#2b0f14,#6b1e2d,#b23a48);
+  font-family:'Libre Baskerville',serif;
+  color:#fff;
+  text-align:center;
+  min-height:100vh;
+  overflow-x:hidden;
+}
 
-    .card {
-      background: rgba(255, 245, 247, 0.15);
-      backdrop-filter: blur(10px);
-      padding: 24px 18px;
-      border-radius: 22px;
-      width: 100%;
-      max-width: 380px; /* ✅ smaller width */
-      box-shadow: 0 18px 35px rgba(0,0,0,0.35);
-      animation: fadeIn 1.4s ease;
-    }
+/* hearts */
+.heart{
+  position:fixed;
+  bottom:-40px;
+  font-size:30px;
+  animation:floatUp 7s linear infinite;
+  cursor:pointer;
+  z-index:9999; /* IMPORTANT */
+}
 
-    h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 36px; /* 🔽 smaller */
-      margin-bottom: 4px;
-      color: #ffd6dc;
-    }
+@keyframes floatUp{
+  from{transform:translateY(0);}
+  to{transform:translateY(-120vh);}
+}
 
-    .subtitle {
-      font-size: 12px;
-      opacity: 0.8;
-      margin-bottom: 12px;
-      font-style: italic;
-    }
+/* card */
+.card{
+  margin:40px auto;
+  background:rgba(255,255,255,0.15);
+  backdrop-filter:blur(10px);
+  padding:25px;
+  border-radius:22px;
+  width:90%;
+  max-width:380px;
+}
 
-    p {
-      font-size: 14px; /* 🔽 smaller text */
-      line-height: 1.7;
-      margin: 12px 0;
-      color: #fff0f2;
-    }
+h1{
+  font-family:'Great Vibes',cursive;
+  font-size:38px;
+  color:#ffd6dc;
+  margin-bottom:5px;
+}
 
-    .soft {
-      font-style: italic;
-      opacity: 0.85;
-    }
+.subtitle{
+  font-size:12px;
+  opacity:0.8;
+  margin-bottom:15px;
+}
 
-    .heart {
-      position: absolute;
-      font-size: 22px; /* 🔽 smaller hearts */
-      cursor: pointer;
-      animation: float 7s linear infinite;
-      opacity: 0.9;
-    }
+p{
+  font-size:14px;
+  line-height:1.7;
+}
 
-    @keyframes float {
-      from { bottom: -30px; }
-      to { bottom: 110%; }
-    }
+button{
+  margin-top:15px;
+  padding:10px 24px;
+  border:none;
+  border-radius:24px;
+  background:#ff6f91;
+  color:white;
+  font-size:14px;
+}
 
-    button {
-      background: linear-gradient(135deg, #ff6f91, #ff9671);
-      border: none;
-      color: white;
-      padding: 10px 24px;
-      font-size: 14px;
-      border-radius: 24px;
-      margin-top: 16px;
-      cursor: pointer;
-    }
+.hidden{display:none;}
 
-    .hidden {
-      display: none;
-    }
-
-    img {
-      width: 100%;
-      max-width: 260px; /* 🔽 image smaller */
-      border-radius: 18px;
-      margin-top: 18px;
-      box-shadow: 0 12px 25px rgba(0,0,0,0.4);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+img{
+  width:100%;
+  max-width:260px;
+  border-radius:18px;
+  margin-top:20px;
+}
+</style>
 </head>
 
 <body>
 
-  <!-- STAGE 1 -->
-  <div class="card" id="stage1">
-    <h1>Good Morning Arya ❤️</h1>
-    <div class="subtitle">(my cutie led bulb 💡)</div>
+<div class="card" id="stage1">
+  <h1>Good Morning Arya ❤️</h1>
+  <div class="subtitle">(my cutie led bulb 💡)</div>
+  <p>Tap on a floating heart 💖</p>
+</div>
 
-    <p class="soft">
-      I hope you woke up feeling calm today.
-    </p>
+<div class="card hidden" id="stage2">
+  <p>I got angry when I shouldn’t have,<br>and I replied late.</p>
+  <button onclick="next()">Continue</button>
+</div>
 
-    <p>
-      Tap on a floating heart 💖  
-      when you’re ready.
-    </p>
-  </div>
+<div class="card hidden" id="stage3">
+  <p>
+    “Apka gussa jhelne ki aadat ho gayi hai ab,<br>
+    toh gussa karo — main manata rahunga aise hi 😘😘😘”
+  </p>
+  <img src="arya.jpg">
+  <h2 style="font-family:'Great Vibes';font-size:28px;">Always 🤍</h2>
+</div>
 
-  <!-- STAGE 2 -->
-  <div class="card hidden" id="stage2">
-    <p>
-      I got angry when I shouldn’t have,<br>
-      and I replied late when you deserved better.
-    </p>
+<script>
+let opened=false;
 
-    <p class="soft">
-      I noticed it, and I wanted to say this properly.
-    </p>
+function createHeart(){
+  const h=document.createElement("div");
+  h.className="heart";
+  h.innerHTML="❤️";
+  h.style.left=Math.random()*90+"vw";
 
-    <button onclick="showFinal()">Continue</button>
-  </div>
-
-  <!-- STAGE 3 -->
-  <div class="card hidden" id="stage3">
-    <p>
-      It may seem like a small moment,<br>
-      but you matter too much to me to ignore it.
-    </p>
-
-    <p class="soft">
-      And honestly…
-    </p>
-
-    <p>
-      <b>
-        “Apka gussa jhelne ki aadat ho gayi hai ab,<br>
-        toh gussa karo — main manata rahunga aise hi 😘😘😘”
-      </b>
-    </p>
-
-    <img src="arya.jpg" alt="Us 🤍">
-
-    <h2 style="font-family:'Great Vibes', cursive; font-size:28px; margin-top:16px;">
-      Always 🤍
-    </h2>
-  </div>
-
-  <script>
-    let opened = false;
-
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerHTML = "❤️";
-      heart.style.left = Math.random() * 100 + "vw";
-
-      heart.onclick = () => {
-        if (!opened) {
-          opened = true;
-          document.getElementById("stage1").classList.add("hidden");
-          document.getElementById("stage2").classList.remove("hidden");
-        }
-        heart.remove();
-      };
-
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 7000);
+  h.onclick=()=>{
+    if(!opened){
+      opened=true;
+      document.getElementById("stage1").classList.add("hidden");
+      document.getElementById("stage2").classList.remove("hidden");
     }
+    h.remove();
+  };
 
-    setInterval(createHeart, 1400);
+  document.body.appendChild(h);
+  setTimeout(()=>h.remove(),7000);
+}
 
-    function showFinal() {
-      document.getElementById("stage2").classList.add("hidden");
-      document.getElementById("stage3").classList.remove("hidden");
-    }
-  </script>
+setInterval(createHeart,1200);
+
+function next(){
+  document.getElementById("stage2").classList.add("hidden");
+  document.getElementById("stage3").classList.remove("hidden");
+}
+</script>
 
 </body>
 </html>
