--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ body{
   overflow-x:hidden;
 }
 
-/* hearts */
+/* floating hearts */
 .heart{
   position:fixed;
   bottom:-40px;
   font-size:30px;
   animation:floatUp 7s linear infinite;
   cursor:pointer;
-  z-index:9999; /* IMPORTANT */
+  z-index:9999;
 }
 
 @keyframes floatUp{
@@ -62,6 +62,13 @@ p{
   line-height:1.7;
 }
 
+.sorry{
+  font-family:'Great Vibes',cursive;
+  font-size:26px;
+  color:#ffd6dc;
+  margin-top:10px;
+}
+
 button{
   margin-top:15px;
   padding:10px 24px;
@@ -85,24 +92,39 @@ img{
 
 <body>
 
+<!-- STAGE 1 -->
 <div class="card" id="stage1">
   <h1>Good Morning Arya ❤️</h1>
   <div class="subtitle">(my cutie led bulb 💡)</div>
   <p>Tap on a floating heart 💖</p>
 </div>
 
+<!-- STAGE 2 -->
 <div class="card hidden" id="stage2">
-  <p>I got angry when I shouldn’t have,<br>and I replied late.</p>
+  <p>
+    I got angry when I shouldn’t have,<br>
+    and I replied late.
+  </p>
+
+  <div class="sorry">
+    So sorry Aryaaaaa 😘😘😘
+  </div>
+
   <button onclick="next()">Continue</button>
 </div>
 
+<!-- STAGE 3 -->
 <div class="card hidden" id="stage3">
   <p>
     “Apka gussa jhelne ki aadat ho gayi hai ab,<br>
     toh gussa karo — main manata rahunga aise hi 😘😘😘”
   </p>
-  <img src="arya.jpg">
-  <h2 style="font-family:'Great Vibes';font-size:28px;">Always 🤍</h2>
+
+  <img src="arya.jpg" alt="Us 🤍">
+
+  <h2 style="font-family:'Great Vibes';font-size:28px;">
+    Always 🤍
+  </h2>
 </div>
 
 <script>
